<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextPhoto"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="57dp"
        android:contentDescription="@string/photo"
        app:layout_constraintBottom_toTopOf="@+id/Person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="234dp"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="65dp"
        android:contentDescription="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addtag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/Person"
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/person"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addtag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/lastPhoto"
        android:layout_width="48dp"
        android:layout_height="74dp"
        android:layout_marginTop="306dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="312dp"
        android:text="@string/last"
        app:layout_constraintBottom_toTopOf="@+id/Person"
        app:layout_constraintEnd_toStartOf="@+id/nextPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nextPhoto"
        android:layout_width="48dp"
        android:layout_height="74dp"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="200dp"
        android:text="@string/Next"
        app:layout_constraintBottom_toTopOf="@+id/addtag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lastPhoto"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>